--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "flask>=3.1.2",
     "jupyter>=1.1.1",
     "notebook>=7.5.2",
     "numpy>=2.4.1",
