--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "catboost>=1.2.8",
     "flask>=3.1.2",
     "jupyter>=1.1.1",
+    "lightgbm>=4.6.0",
     "notebook>=7.5.2",
     "numpy>=2.4.1",
     "pandas>=2.3.3",
