--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "catboost>=1.2.8",
+    "fastapi>=0.129.0",
     "flask>=3.1.2",
     "jupyter>=1.1.1",
     "lightgbm>=4.6.0",
@@ -14,5 +15,6 @@ dependencies = [
     "pandas>=2.3.3",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
+    "uvicorn>=0.40.0",
     "xgboost>=3.1.3",
 ]
