--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "notebook>=7.5.2",
     "numpy>=2.4.1",
     "pandas>=2.3.3",
+    "pytest>=9.0.2",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
     "uvicorn>=0.40.0",
