--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "numpy>=2.4.1",
     "pandas>=2.3.3",
     "pytest>=9.0.2",
+    "requests>=2.32.5",
     "scikit-learn>=1.8.0",
     "seaborn>=0.13.2",
     "uvicorn>=0.40.0",
